--- a/plugins/tech-mix.yml
+++ b/plugins/tech-mix.yml
@@ -18,14 +18,14 @@ matches:
 i18n:
   zh-CN:
     name: 科技文献混合翻译专家
-    description: 专为科技文献翻译优化，保留英文专业术语并用中文标注，确保技术准确性和可读性
+    description: 专为科技文献翻译优化，使用中文翻译并在首次出现时用括号标注英文专业术语，确保技术准确性和可读性
     details: |-
-      该专家专为科技文献、学术论文和工程文档翻译而设计，遵循叶劲峰《游戏引擎架构》的翻译风格，保留英文技术术语并用括号标注中文翻译，在保持技术准确性的同时确保中文读者的可读性。
+      该专家专为科技文献、学术论文和工程文档翻译而设计，遵循叶劲峰《游戏引擎架构》的翻译风格，使用中文翻译并在首次出现时用括号标注英文技术术语，在保持技术准确性的同时确保中文读者的可读性。
   zh-TW:
     name: 科技文獻混合翻譯專家
-    description: 專為科技文獻翻譯優化，保留英文專業術語並用中文標註，確保技術準確性和可讀性
+    description: 專為科技文獻翻譯優化，使用中文翻譯並在首次出現時用括號標註英文專業術語，確保技術準確性和可讀性
     details: |-
-      該專家專為科技文獻、學術論文和工程文檔翻譯而設計，遵循葉勁峰《遊戲引擎架構》的翻譯風格，保留英文技術術語並用括號標註中文翻譯，在保持技術準確性的同時確保中文讀者的可讀性。
+      該專家專為科技文獻、學術論文和工程文檔翻譯而設計，遵循葉勁峰《遊戲引擎架構》的翻譯風格，使用中文翻譯並在首次出現時用括號標註英文技術術語，在保持技術準確性的同時確保中文讀者的可讀性。
 env:
   imt_source_field: text
   imt_trans_field: text
@@ -183,7 +183,7 @@ multipleSystemPrompt: |-
   着色器编译(shader compilation)优化在目标硬件上的性能。
 
 prompt: |-
-  Translate the technical text below into {{to}} following the technical literature translation style. Preserve English technical terms with Chinese annotations on first occurrence, maintain technical accuracy, and ensure readability.
+  Translate the technical text below into {{to}} following the technical literature translation style. Use Chinese translation with English technical terms in parentheses on first occurrence, maintain technical accuracy, and ensure readability.
 
   {{normal_result_yaml_example}}
 
@@ -192,7 +192,7 @@ prompt: |-
   {{yaml}}
 
 multiplePrompt: |-
-  Translate all instances of technical text in the YAML-formatted document below into {{to}}. Follow the technical literature translation style: preserve English technical terms with Chinese annotations on first occurrence, maintain all technical formatting, and ensure the translation is both accurate and readable.
+  Translate all instances of technical text in the YAML-formatted document below into {{to}}. Follow the technical literature translation style: use Chinese translation with English technical terms in parentheses on first occurrence, maintain all technical formatting, and ensure the translation is both accurate and readable.
 
   {{normal_result_yaml_example}}
 
@@ -201,7 +201,7 @@ multiplePrompt: |-
   {{yaml}}
 
 subtitlePrompt: |-
-  Translate all the technical text in the {{imt_sub_source_field}} fields of the YAML format video subtitles below into {{to}}. Follow the technical literature translation style: preserve English technical terms with Chinese annotations on first occurrence, maintain technical accuracy, and ensure readability for {{to}} audiences.
+  Translate all the technical text in the {{imt_sub_source_field}} fields of the YAML format video subtitles below into {{to}}. Follow the technical literature translation style: use Chinese translation with English technical terms in parentheses on first occurrence, maintain technical accuracy, and ensure readability for {{to}} audiences.
 
   {{subtitle_result_yaml_example}}
 
@@ -239,7 +239,7 @@ langOverrides:
       10. 保持一致性：在整份文件中對相同的英文術語使用相同的中文翻譯
 
     prompt: |-
-      將下面的技術文本按照技術文獻翻譯風格翻譯成繁體中文。在首次出現時保留英文技術術語並用括號標註繁體中文翻譯，保持技術準確性，並確保可讀性。
+      將下面的技術文本按照技術文獻翻譯風格翻譯成繁體中文。在首次出現時使用繁體中文翻譯並用括號標註英文技術術語，保持技術準確性，並確保可讀性。
 
       {{normal_result_yaml_example_traditional}}
 
@@ -248,7 +248,7 @@ langOverrides:
       {{yaml}}
 
     multiplePrompt: |-
-      將下面 YAML 格式文檔中的所有技術文本翻譯成繁體中文。遵循技術文獻翻譯風格：在首次出現時保留英文技術術語並用括號標註繁體中文翻譯，保持所有技術格式，並確保翻譯既準確又可讀。
+      將下面 YAML 格式文檔中的所有技術文本翻譯成繁體中文。遵循技術文獻翻譯風格：在首次出現時使用繁體中文翻譯並用括號標註英文技術術語，保持所有技術格式，並確保翻譯既準確又可讀。
 
       {{normal_result_yaml_example_traditional}}
 
@@ -257,7 +257,7 @@ langOverrides:
       {{yaml}}
 
     subtitlePrompt: |-
-      將下面 YAML 格式影片字幕中所有 {{imt_sub_source_field}} 字段中的技術文本翻譯成繁體中文。遵循技術文獻翻譯風格：在首次出現時保留英文技術術語並用括號標註繁體中文翻譯，保持技術準確性，並確保對繁體中文觀眾的可讀性。
+      將下面 YAML 格式影片字幕中所有 {{imt_sub_source_field}} 字段中的技術文本翻譯成繁體中文。遵循技術文獻翻譯風格：在首次出現時使用繁體中文翻譯並用括號標註英文技術術語，保持技術準確性，並確保對繁體中文觀眾的可讀性。
 
       {{subtitle_result_yaml_example_traditional}}
 
